--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "webpack-dev-server": "1.6.5"
   },
   "dependencies": {
-    "interact": "git://github.com/taye/interact.js"
+    "lodash": "^2.4.1",
+    "interact.js": "^1.1.3"
   }
 }
